# admingo

./: .gitignore  LICENSE  README.md  pyproject.toml
admingo/: pyproject.toml
admingo/static/admingo/css/: base.css
admingo/static/admingo/fonts/: JetBrainsMono-Regular.ttfZone.Identifier
admingo/templates/admin/: base.html
admingo/templatetags/: admingo_tags.py
